<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings" translatable="false">Settings</string>

    <!-- Menu label to fetch updated weather from the server -->
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Labels for preferences -->
    <!-- Labels for location preferences -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">92646</string>

    <!-- Labels for units preferences -->
    <string name="pref_units_label">Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!-- Labels for notification preferences -->
    <string name="pref_notifications_label">Weather Notifications</string>
    <string name="pref_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_notifications_true">Enabled</string>
    <string name="pref_notifications_false">Not Enabled</string>
    <string name="pref_notifications_default">true</string>

    <!-- Labels for icon pack selection -->
    <string name="pref_icons_label">Icon Pack</string>
    <string name="pref_icons_key" translatable="false">icon_pack</string>
    <string name="pref_icons_colored">colored</string>
    <string name="pref_icons_mono">mono</string>
    <string name="pref_icon_colored_url" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Colored/art_<xliff:g id="description">%s</xliff:g>.png</string>
    <string name="pref_icon_mono_url" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Mono/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <!-- Labels for dates -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- String format for units -->
    <string name="format_temperature"><xliff:g id="temperature">%1.0f</xliff:g>\u00B0</string>

    <!-- String format for details screen -->
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g>%%</string>
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> kPa</string>
    <string name="format_wind_kmh"><xliff:g id="wind_speed">%1.0f</xliff:g> km/h <xliff:g id="wind_direction">%s</xliff:g></string>
    <string name="format_wind_mph"><xliff:g id="wind_speed">%1.0f</xliff:g> mph <xliff:g id="wind_direction">%s</xliff:g></string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Notification preference -->
    <string name="last_notification">last_notification</string>

    <!-- Empty ListView -->
    <string name="empty_forecast_list">No weather information available.</string>
    <string name="empty_forecast_list_no_network">"No weather information available \n No network connection to fetch weather"</string>
    <string name="empty_forecast_list_server_down">"No weather information available. \n The server is not returning data"</string>
    <string name="empty_forecast_list_server_error">"No weather information available. \n The server is not returning valid data. Please check for an updated version of Sunshine</string>
    <string name="empty_forecast_list_location_invalid">"No weather information available. \n Invalid location entered. Please enter a new location.</string>

    <!-- SharedPreference key for location status -->
    <string name="pref_location_status_key">location_status</string>

    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location&#8230; (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <!-- A11y -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>

    <!-- Weather Conditions -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="low">%1$i</xliff:g>)</string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <!-- String for Google Cloud Messaging Weather Alert -->
    <string name="gcm_weather_alert">Weather Alert! <xliff:g id="weather">%1$s</xliff:g> at <xliff:g id="location">%2$s</xliff:g></string>
</resources>
