<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine.app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.android.sunshine.app.LocationEditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="5"
        />

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/unit_entries"
        android:entryValues="@array/unit_values"
        />

    <CheckBoxPreference
        android:title="@string/pref_notifications_label"
        android:key="@string/pref_notifications_key"
        android:defaultValue="@string/pref_notifications_default"
        android:summaryOff="@string/pref_notifications_false"
        android:summaryOn="@string/pref_notifications_true"
        />

    <ListPreference
        android:title="@string/pref_icons_label"
        android:key="@string/pref_icons_key"
        android:defaultValue="@string/pref_icons_colored"
        android:entries="@array/icon_pack_entries"
        android:entryValues="@array/icon_pack_values"
        android:summary="%s"
        />

</PreferenceScreen>